[add]画像投稿機能の追加

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -4,3 +4,11 @@
 <h2>本文</h2>
 <p><%= @list.body %></p>
 
+<h2>画像</h2>
+<% if @list.image.attached? %>
+  <%= image_tag @list.image, size: "300×300" %>
+<% else %>
+  <%= image_tag 'no_image', size: "300×300" %>
+<% end %>
+<!--投稿した画像が表示されていない。-->
+
