--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -7,6 +7,10 @@
   <h4>本文</h4>
   <%= f.text_area :body %>
   
+  <h4>画像</h4>
+  <!-- file_fieldでは音声ファイルや動画ファイルなども投稿できるが、acceptで画像ファイルのみ投稿できるようにしている -->
+  <%= f.file_field :image, accept: "image/*" %>
+  
   <%= f.submit '投稿' %>
 <% end %>
   
