[fix]画像投稿時に画像が表示されないバグ修正。画像サイズが変わらないバグ修正

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -6,9 +6,12 @@
 
 <h2>画像</h2>
 <% if @list.image.attached? %>
-  <%= image_tag @list.image, size: "300×300" %>
+  <%= image_tag @list.image, size: "800x800" %>
 <% else %>
-  <%= image_tag 'no_image', size: "300×300" %>
+  <%= image_tag 'no_image', size: "300x300" %>
 <% end %>
-<!--投稿した画像が表示されていない。-->
+
+<!--「x」は「かける」ではなく、「エックス」--->
+
+<%= link_to "編集", edit_list_path(@list.id) %>
 
