[add/fix]投稿時にフラッシュメッセージを表示する機能追加。編集画面が開かなかったエラー発見・解消

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,11 @@
     </nav>
     
     <main>
+      <!--キーをmessage_type、値をmessageにそれぞれ代入
+      キーは notice　値は "投稿に成功しました"　など-->
+      <% flash.each do |message_type, message| %>
+        <div class="flash-message <%= message_type %>"><%= message %></div>
+      <% end %>
       <%= yield %>
     </main>
     
